# fastapi-learning

./: .gitignore  LICENSE  README.md
Technical-Skills/fastapi-builder/: SKILL.md
Technical-Skills/fastapi-builder/assets/crud-postgres/: Dockerfile  pyproject.toml  requirements.txt
Technical-Skills/fastapi-builder/assets/crud-postgres/app/: models.py  schemas.py
Technical-Skills/fastapi-builder/assets/crud-postgres/tests/: __init__.py
Technical-Skills/fastapi-builder/assets/hello-world/: Dockerfile  main.py
Technical-Skills/fastapi-builder/references/: core-patterns.md  database.md
Technical-Skills/sqlmodel-fastapi/: SKILL.md
Technical-Skills/sqlmodel-fastapi/references/: crud.md  database-config.md  filtering.md  migrations.md  model-separation.md  relationships.md
Technical-Skills/tdd-pytest/: SKILL.md
Technical-Skills/tdd-pytest/references/: coverage.md  fastapi-testing.md  mocking.md  organization.md
fastapi-hello-world/: .env.example  README.md  _main.py  add_columns.py  config.py  database.py  main.py  models.py  pyproject.toml  reset_db.py
projects/hello-world/: README.md  pyproject.toml
skill/: SKILL.md
skill/assets/crud-postgres/: .env.example  README.md  docker-compose.yml
skill/assets/crud-postgres/app/: __init__.py  database.py  dependencies.py  main.py
skill/assets/crud-postgres/app/routers/: items.py
skill/assets/crud-postgres/tests/: conftest.py  test_items.py
skill/assets/hello-world/: pyproject.toml
skill/references/: authentication.md  core-patterns.md  database.md  deployment.md  testing.md
