[project]
name = "fastapi-hello-world"
version = "1.0.0"
description = "A minimal FastAPI application"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pytest>=9.0.2",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.31",
    "psycopg2-binary>=2.9.11",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]
